<resources>
    <string name="app_name">River</string>
    <string name="s1">欢迎使用</string>
    <string name="s2">进入</string>
    <string name="l1">黄河工程管理巡查系统</string>
    <string name="l2">用户名:</string>
    <string name="l3">密码:</string>
    <string name="l4">记住密码</string>
    <string name="l5">自动登录</string>
    <string name="l6">登录</string>
    <string name="image">图片</string>
    <string name="all_image">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="done">完成</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="delete">删除</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="undo">撤消</string>
</resources>
