<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login1"
   >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l1"
        android:id="@+id/t1"
        android:textSize="28dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/t1"
        android:id="@+id/r1"
        android:background="@drawable/loginbg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t2"
        android:layout_marginTop="10dp"
        android:text="@string/l2"
        android:textSize="22dp"

        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/t2"
            android:layout_marginTop="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="textPassword"
            android:id="@+id/editText2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t3"
            android:layout_below="@id/t2"
            android:text="@string/l3"
            android:textSize="22dp"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:layout_toRightOf="@id/t2"
            />
    </RelativeLayout>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/r1"
    android:id="@+id/r2">


    <CheckBox
        android:text="@string/l4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:id="@+id/radioButton1" />

    <CheckBox
        android:text="@string/l5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="250dp"
        android:id="@+id/radioButton2" />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/r2"
        android:id="@+id/btn2"
        android:text="@string/l6"
        android:onClick="btn_login_click"
        android:textSize="25dp"
        android:background="#63B8FF"
        android:layout_margin="25dp"/>
</RelativeLayout>
